fix(layout): restore footer to the proper position (#1470)
* fix(layout): restore footer to the proper position

* align ToC scrollbar properly on short headers

--- a/quartz/components/styles/toc.scss
+++ b/quartz/components/styles/toc.scss
@@ -74,6 +74,7 @@ button#toc {
   }
   > ul.overflow {
     max-height: none;
+    width: 100%;
   }
 
   @for $i from 0 through 6 {
